apache/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-test
  namespace: apache-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache-test
  template:
    metadata:
      labels:
        app: apache-test
    spec:
      containers:
      - name: apache-test
        image: quay.io/scollier/apache-test
        volumeMounts:
        - name: aws-vol
          mountPath: /var/www/html
      volumes:
        - name: aws-vol
          configMap:
            name: aws-cm
