apache/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  labels:
    run: apache-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: apache-test
