apache/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    run: apache-service
  name: apache-service
  namespace: apache-test
spec:
  host: XXXXX
  port:
    targetPort: 80
  to:
    kind: Service
    name: apache-service
    weight: 100
  wildcardPolicy: None
